# LlamaEdge

api-server/llama-api-server/: Cargo.toml
api-server/llama-api-server/src/: main.rs
api-server/llama-core/: Cargo.toml
api-server/llama-core/src/: lib.rs
chat_ui/: Cargo.toml
chat_ui/src/: main.rs
crates/llama-core/: Cargo.toml
crates/llama-core/src/: graph.rs  lib.rs
llama-api-server/: Cargo.toml
llama-api-server/src/: main.rs
